# dmarc-msp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  dmarc-msp.example.yaml  dmarc-msp.example.yml  docker-compose.dev.yml  docker-compose.override.example.yml  docker-compose.yml  entrypoint.sh  parsedmarc.example.ini  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
deploy/certbot/: cli.ini  entrypoint.sh
deploy/cron/: email-retention
deploy/dashboards/: opensearch_dashboards.yml
deploy/nginx/: Dockerfile  entrypoint.sh  mta-sts-http-only.conf.template  mta-sts.conf.template  nginx-http-only.conf.template  nginx.conf.template
deploy/opensearch/: opensearch.yml
deploy/postfix/: Dockerfile  entrypoint.sh  main.cf.template  master.cf
dmarc_msp/: __init__.py  config.py  db.py  models.py
dmarc_msp/api/: __init__.py  dependencies.py  middleware.py  schemas.py
dmarc_msp/cli/: __init__.py  analyst.py  client.py  client_user.py  dashboard.py  domain.py  helpers.py  migrate.py  parsedmarc.py  retention.py  server.py  tenant.py
dmarc_msp/dns_providers/: __init__.py  azure.py  base.py  cloudflare.py  gcp.py  route53.py
dmarc_msp/process/: __init__.py  docker.py
dmarc_msp/services/: clients.py  dashboards.py  dns.py  migrate.py  offboarding.py  onboarding.py  opensearch.py  parsedmarc.py  retention.py
opensearch/: opensearch_dashboards.ndjson
tests/: conftest.py  test_config.py  test_models.py
(+33 files in other folders)
